src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Primary_Community_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup defines the primary Community Profile associated with the Contact record.</description>
        <label>Primary Community Profile</label>
        <referenceTo>Community_Profile__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <description>This field describes the primary role or user experience in the Community.  The values of this field should match those of Community_Profile__c.RecordType.Name</description>
        <label>Primary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reg_Completed__c</fullName>
        <description>Represents when the User completed the Community Registration process.  If NULL, the user will be required to step through the Registration Wizard before accessing the Community.</description>
        <inlineHelpText>Represents when the User completed the Community Registration process.  If NULL, the user will be required to step through the Registration Wizard before accessing the Community.</inlineHelpText>
        <label>Reg Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reg_General_Info_Completed__c</fullName>
        <description>Represents when the User completed the General Information details within the Community.</description>
        <inlineHelpText>Represents when the User completed the General Information details within the Community.</inlineHelpText>
        <label>Reg General Info Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reg_Interests_Completed__c</fullName>
        <description>Represents when the User completed the Interest details within the Community.</description>
        <inlineHelpText>Represents when the User completed the Interest details within the Community.</inlineHelpText>
        <label>Reg Interests Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reg_Picture_Completed__c</fullName>
        <description>Represents when the User completed the Profile Picture details within the Community.</description>
        <inlineHelpText>Represents when the User completed the Profile Picture details within the Community.</inlineHelpText>
        <label>Reg Picture Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reg_T_C_Completed__c</fullName>
        <description>Represents when the User accepted the Terms &amp; Conditions within the Community.</description>
        <inlineHelpText>Represents when the User accepted the Terms &amp; Conditions within the Community.</inlineHelpText>
        <label>Reg T&amp;C Completed</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>